# kit-timetable-server-rs

./: Cargo.toml
src/: main.rs
src/application/: mod.rs
src/application/interactors/: subject.rs  subject_test.rs  user.rs  user_test.rs
src/application/repositories/: subject.rs  subject_mock.rs  user.rs
src/application/usecases/: subject.rs  user.rs
src/domain/: mod.rs
src/domain/entities/: subject.rs  subject_td.rs  user.rs  user_td.rs
src/infrastructure/: mod.rs
src/infrastructure/controllers/request/: mod.rs
src/infrastructure/controllers/subject/: dto.rs  mod.rs
src/infrastructure/controllers/user/: mod.rs
src/infrastructure/frameworks/: config.rs  container.rs
src/infrastructure/frameworks/graphql/: mod.rs
src/infrastructure/frameworks/graphql/resolvers/: mod.rs  subject.rs  user.rs
src/infrastructure/gateways/subject/: dto.rs  extend.rs  extend_test.rs  mod.rs
src/infrastructure/gateways/user/: mod.rs
src/infrastructure/presenters/subject/: dto.rs  mod.rs  tests.rs
src/infrastructure/presenters/user/: dto.rs  mod.rs  test.rs
src/utils/: elasticsearch.rs  mod.rs  phantom.rs
