[package]
name = "kit-timetable-server"
version = "0.1.0"
authors = ["f0reachARR <f0reach@f0reach.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
async-graphql = "2.5.2"
async-graphql-warp = "2.5.2"
async-trait = "0.1.42"
elasticsearch = "7.10.1-alpha.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "*"
thiserror = "1.0.23"
anyhow = "1.0.38"
mockall = "0.9.1"
dotenv = "0.15.0"
envconfig = "0.9.1"
chrono = "0.4.19"
jsonwebtoken = "7.2.0"